Fixed z-index issue

--- a/style/style.scss
+++ b/style/style.scss
@@ -91,7 +91,7 @@
 	background-repeat: no-repeat;
 	content: "";
 	inset: 0;
-	z-index: -1;
+
 	mask-image: url(../assets/ink_mask.gif);
 	mask-size: cover;
 	mask-position: center;
